Initial working version of example API
