# api/router.go
@@ -1,30 +1,22 @@
-/*
- * (c)  2022 – Wawa, Inc.
- * All Rights Reserved.
- *
- * NOTICE:  All information contained herein is, and shall at all times remain, the sole and exclusive property of Wawa, Inc.
- * All such information, including the intellectual and technical concepts contained therein, are proprietary to Wawa, Inc. and are protected by copyright law.
- * Dissemination or reproduction of this information is strictly forbidden unless prior written permission is obtained from a duly authorized representative of Wawa, Inc.
- */
-
 package api
 
 import (
 	"api-reference-golang/api/entities"
 	_ "api-reference-golang/docs" // docs is generated by Swag CLI, you have to import it
+	"api-reference-golang/models"
 	"github.com/gin-gonic/gin"
 	"github.com/penglongli/gin-metrics/ginmetrics"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func Router() *gin.Engine {
+func Router(conn *models.Connection) *gin.Engine {
 	router := gin.Default()
 
 	setupMonitoring(router)
 
 	// Setup API Mappings
-	entities.CreateRoutes(router)
+	entities.CreateRoutes(router, conn)
 
 	// Setup Swagger Endpoint
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json") // The url pointing to API definition
