# docs/swagger.yaml
@@ -1,53 +1,78 @@
 basePath: /api/v1
 definitions:
-  taskpaper.Item:
+  entity.Entity:
     properties:
-      _id:
-        description: Identifier
+      createdAt:
         type: string
-      children:
-        description: |-
-          Children is the list of all items that are indented by at least one tab
-          below the current item.
-        items:
-          $ref: '#/definitions/taskpaper.Item'
-        type: array
-      content:
-        description: |-
-          Content is the item text, not including the "- " prefix for Kind=Task or
-          the ":" suffix for Kind=Project.
+      date:
         type: string
-      indent:
-        description: |-
-          Indent is the amount of additional tabs the original item was indented by
-          if it's more than the single tab that establishes it as a child of the
-          previous line item.
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
         type: integer
-      kind:
-        description: Kind is the item kind.
-        type: string
-      tags:
-        description: Holds all tags
+      items:
         items:
-          type: string
+          $ref: '#/definitions/entity.EntityItem'
         type: array
+      name:
+        type: string
+      updatedAt:
+        type: string
+      value:
+        maximum: 100
+        minimum: 0
+        type: integer
+    required:
+    - date
+    - name
     type: object
-host: localhost:27017
+  entity.EntityItem:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      item-name:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - item-name
+    type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
+  utils.ResponseData:
+    properties:
+      data: {}
+      meta: {}
+      status:
+        type: integer
+    type: object
+host: localhost:8080
 info:
   contact:
-    email: alex@redantelope.com
-    name: Alex Brown
-  description: This API is used for providing a entities API for entities data
+    email: support@example.com
+    name: API Support
+  description: Reference Golang API
   license:
     name: Apache 2.0
-  title: Taskpaper API
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  title: Reference Golang API
   version: "1.0"
 paths:
-  /papers/:
+  /api/v1/entities/:
     get:
       consumes:
       - application/json
-      description: Gets all entities in DB
+      description: Gets all Entities in DB
       produces:
       - application/json
       responses:
@@ -55,89 +80,103 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/taskpaper.Item'
+              $ref: '#/definitions/entity.Entity'
             type: array
-      summary: Gets all entities
+      summary: Gets all Entities
       tags:
-      - entities
+      - Entities
     post:
       consumes:
       - application/json
-      description: Creates a entities document
+      description: Creates new Entity
       parameters:
-      - description: New Paper
+      - description: Entity to update
         in: body
-        name: entities
+        name: entity
         required: true
         schema:
-          type: string
+          $ref: '#/definitions/entity.Entity'
       produces:
       - application/json
       responses:
         "200":
-          description: New Paper ID(Hex)
+          description: New Entity
           schema:
-            type: string
-      summary: Creates paper document based on RAW entities
+            $ref: '#/definitions/entity.Entity'
+      summary: Creates new Entity
       tags:
-      - entities
-  /papers/:pid:
+      - Entities
+  /api/v1/entities/{id}:
     delete:
       consumes:
       - application/json
-      description: Deletes an entities given an entities ID
+      description: Deletes an entity
       parameters:
-      - description: Task to delete
+      - description: Entity ID to delete
         in: path
-        name: pid
+        name: id
         required: true
         type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Updated Task
-      summary: Deletes a entities entities
-      tags:
-      - entities
-    get:
-      consumes:
-      - application/json
-      description: Gets a given Paper in a Paper BSON format
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/taskpaper.Item'
-      summary: Gets a given Paper JSON
+            $ref: '#/definitions/entity.Entity'
+        "404":
+          description: Can not find ID
+          schema:
+            $ref: '#/definitions/utils.ResponseData'
+      summary: Deletes an entity
       tags:
-      - entities
-    put:
+      - Entities
+    get:
       consumes:
       - application/json
-      description: Updates a paper given an paper ID and payload
+      description: Gets an entity by ID
       parameters:
-      - description: Paper to update
+      - description: Entity ID to load
         in: path
-        name: pid
+        name: id
         required: true
         type: string
-      - description: Updated Paper
-        in: body
-        name: entities
-        required: true
-        schema:
-          $ref: '#/definitions/taskpaper.Item'
       produces:
       - application/json
       responses:
         "200":
-          description: Updated Paper
+          description: OK
           schema:
-            type: string
-      summary: Updates a entities document
+            $ref: '#/definitions/entity.Entity'
+        "404":
+          description: Can not find ID
+          schema:
+            $ref: '#/definitions/utils.ResponseData'
+      summary: Gets an entity by ID
       tags:
-      - entities
+      - Entities
+    put:
+      consumes:
+      - application/json
+      description: Updates an entity
+      parameters:
+      - description: Entity to update
+        in: body
+        name: entity
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Entity'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Entity'
+      summary: Updates an entity
+      tags:
+      - Entities
+securityDefinitions:
+  BasicAuth:
+    type: basic
 swagger: "2.0"
